Multiple tables for different test. UI for wilcoxon two paired test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,13 @@
 
 export("%>%")
 export(agr2df)
+export(glb_summary)
+export(grp_summary)
 export(iskayapp)
 export(rename_tables)
 export(test_analysis)
-export(test_summary)
 importFrom(agricolae,Median.test)
+importFrom(agricolae,durbin.test)
 importFrom(agricolae,friedman)
 importFrom(agricolae,kruskal)
 importFrom(broom,glance)
@@ -16,6 +18,7 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_)
 importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,select_)
 importFrom(dplyr,summarise_)
