conditional panel. Fix global summary for friedman

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,3 +27,4 @@ importFrom(rcompanion,cldList)
 importFrom(rcompanion,pairwiseMedianTest)
 importFrom(shiny,runApp)
 importFrom(tibble,data_frame)
+importFrom(tibble,rownames_to_column)
